# plc4x

./: .asf.yaml  .gitignore  CHANGELOG.md  Dockerfile  Jenkinsfile  NOTICE  README.md  RELEASE_NOTES  docker-compose.yaml  jenkins.pom  pom.xml
.github/ISSUE_TEMPLATE/: bug.yml
.github/workflows/: c-platform.yml  changelog.yml  ci.yml  codeql-analysis.yml  dependency-review.yml  go-platform-test-report.yml  go-platform.yml  java-platform-test-report.yml  java-platform.yml  python-platform.yml  release-drafter.yml  sast.yaml
code-generation/: pom.xml
code-generation/language/: pom.xml
code-generation/language-base-freemarker/: pom.xml
code-generation/language-c/: pom.xml
code-generation/language-cs/: pom.xml
code-generation/language-go/: pom.xml
code-generation/language-java/: pom.xml
code-generation/language-python/: pom.xml
code-generation/protocol-base-mspec/: pom.xml
code-generation/protocol-test/: pom.xml
plc4c/: pom.xml
plc4go/: go.mod  go.sum  pom.xml
plc4j/: pom.xml
plc4net/: pom.xml
plc4py/: pom.xml  pyproject.toml
plc4x-rust/: CONTRIBUTING.md   Cargo.toml  README.md  pom.xml
plc4x-rust/fuzz/: Cargo.toml
plc4x-rust/fuzz/fuzz_targets/: header_parser.rs
plc4x-rust/src/: error.rs  lib.rs  s7.rs  types.rs
protocols/: pom.xml
tools/: check_sigs.sh  docker-compose.yaml  release-0-update-generated-code.sh  release-1-create-branch.sh  release-2-prepare-release.sh  release-3-finish-release.sh  release-3-perform-release.sh  release-abort.sh  stage.pom  validate-release.sh
website/: antora-playbook.yml  pom.xml
(+3269 files in other folders)
