[package]
name = "plc4x-rust"
version = "0.1.0"
edition = "2021"
description = "Rust bindings for Apache PLC4X"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.3"
thiserror = "1.0"
bytes = "1.4"
tokio = { version = "1.28", features = ["full"] }
tracing = "0.1"

[dev-dependencies]
tokio-test = "0.4"
tokio = { version = "1.28", features = ["full", "test-util"] }

[profile.release]
debug = true
